--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
 asgiref==3.2.10
+certifi==2020.6.20
+chardet==3.0.4
 Django==3.1.2
+django-cors-headers==3.5.0
 djangorestframework==3.12.1
+djangorestframework-jwt==1.11.0
+httpie==2.3.0
+idna==2.10
 psycopg2==2.8.6
 Pygments==2.7.2
+PyJWT==1.7.1
+PySocks==1.7.1
 pytz==2020.1
+requests==2.24.0
+requests-toolbelt==0.9.1
 sqlparse==0.4.1
+urllib3==1.25.11
