--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.2.10
 certifi==2020.6.20
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==3.1.2
 django-cors-headers==3.5.0
+django-heroku==0.3.1
 djangorestframework==3.12.1
 djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==4.4.0
+gunicorn==20.0.4
 httpie==2.3.0
 idna==2.10
 psycopg2==2.8.6
@@ -16,3 +20,4 @@ requests==2.24.0
 requests-toolbelt==0.9.1
 sqlparse==0.4.1
 urllib3==1.25.11
+whitenoise==5.2.0
