--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+static/
 # Created by https://www.toptal.com/developers/gitignore/api/python,django,react
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django,react
 
